@@ -17,7 +17,8 @@
 import os
 from cStringIO import StringIO
 import errno
-from tempfile import TemporaryFile
+import subprocess
+from tempfile import TemporaryFile, mkdtemp
 
 from bzrlib.diff import internal_diff, external_diff, show_diff_trees
 from bzrlib.errors import BinaryFile, NoDiff
@@ -109,9 +110,17 @@ class TestDiff(TestCase):
                                      use_stringio=True)
         self.check_patch(lines)
 
-    def test_external_diff_binary(self):
-        lines = external_udiff_lines(['\x00foobar\n'], ['foo\x00bar\n'])
-        self.assertEqual(['Binary files old and new differ\n', '\n'], lines)
+    def test_external_diff_binary_lang_c(self):
+        orig_lang = os.environ.get('LANG')
+        try:
+            os.environ['LANG'] = 'C'
+            lines = external_udiff_lines(['\x00foobar\n'], ['foo\x00bar\n'])
+            self.assertEqual(['Binary files old and new differ\n', '\n'], lines)
+        finally:
+            if orig_lang is None:
+                del os.environ['LANG']
+            else:
+                os.environ['LANG'] = orig_lang
 
     def test_no_external_diff(self):
         """Check that NoDiff is raised when diff is not available"""
@@ -180,6 +189,25 @@ class TestDiff(TestCase):
                     u'new_\xe5', ['new_text\n'], output)
         self.failUnless(isinstance(output.getvalue(), str),
             'internal_diff should return bytestrings')
+
+
+class TestDiffFiles(TestCaseInTempDir):
+
+    def test_external_diff_binary(self):
+        """The output when using external diff should use diff's i18n error"""
+        # Make sure external_diff doesn't fail in the current LANG
+        lines = external_udiff_lines(['\x00foobar\n'], ['foo\x00bar\n'])
+
+        cmd = ['diff', '-u', 'old', 'new']
+        open('old', 'wb').write('\x00foobar\n')
+        open('new', 'wb').write('foo\x00bar\n')
+        pipe = subprocess.Popen(cmd, stdout=subprocess.PIPE,
+                                     stdin=subprocess.PIPE)
+        out, err = pipe.communicate()
+        # Diff returns '2' on Binary files.
+        self.assertEqual(2, pipe.returncode)
+        # We should output whatever diff tells us, plus a trailing newline
+        self.assertEqual(out.splitlines(True) + ['\n'], lines)
 
 
 class TestDiffDates(TestCaseWithTransport):
